Update How SitePerProcessBrowserTest ChildFrames waits for CompositorFrames

SitePerProcessBrowserTest had its own custom class to wait for CompositorFrame
submission, ChildFrameCompositorFrameSwapCounter. However this relied on the
pre-viz submission path.

This change updates those tests to use the browser_tests_utils
RenderFrameSubmissionObserver which handles both classic display compositor as
well as viz.

TEST=SitePerProcessBrowserTest.CompositorFrameSwapped
TEST=SitePerProcessBrowserTest.HiddenOOPIFWillNotGenerateCompositorFrames
TEST=SitePerProcessBrowserTest.HiddenOOPIFWillNotGenerateCompositorFramesAfterNavigation
TESt=SitePerProcessBrowserTest.SubframeVisibleAfterRenderViewBecomesSwappedOut

Bug: 787941
Change-Id: I69aefc2fe455d4d90bbf70dbebb174a97a36b924
Reviewed-on: https://chromium-review.googlesource.com/1070609
Commit-Queue: Jonathan Ross <jonross@chromium.org>
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561909}
Former-commit-id: afe763855946ff571f8969da93a9db2c17b3fe3e